# Gemini_PyScrAI

./: .env.example  .gitignore  README.md  pyproject.toml  run_api.py  state-dev.json
.clinerules/: rules.md
config/: settings.toml
docs/: UI_INTEGRATION_GUIDE.md  addendum_I.md  blueprint.md  phase_I.md
docs/dev/: INTEGRATION_TESTING_CHECKLIST.md  QUICK_START_TESTING.md  RESEARCHER_MEDIATION_UI.md  UI_CONSOLIDATION.md  UI_ENHANCEMENT_SUMMARY.md  VISUAL_REFERENCE.md  api_contracts.md  data_models.md  phase_2.md  setup.md  state_transitions.md  zeus_cli_guide.md
scripts/: clear_simulations.py
src/scrai/: __init__.py
src/scrai/api/: __init__.py  app.py  dependencies.py  schemas.py
src/scrai/cli/: __init__.py  main.py  memory.py  runtime.py  store.py
src/scrai/config/: __init__.py  settings.py
src/scrai/data/: __init__.py  action_repository.py  actor_repository.py  event_repository.py  firestore_client.py  repository.py  simulation_repository.py
src/scrai/engine/: __init__.py  context.py  exceptions.py  llm_prompts.py  phase_engine.py  phase_handlers.py
src/scrai/llm/: __init__.py  base.py  service.py
src/scrai/models/: __init__.py  action.py  actor.py  event.py  simulation_state.py
src/scrai/scenarios/: __init__.py  base.py  examples.py  factory.py  registry.py  service.py
tests/: conftest.py  test_cli.py  test_integration.py  test_scenarios.py
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: ActionComposer.tsx  ActionViewer.tsx  ActiveSimulationPanel.tsx  ActorManager.tsx  ConnectionStatusBadge.tsx  CreateSimulationForm.tsx  (+8 more)
(+12 files in other folders)
